--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.17-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>2.6.0</version>
+		<relativePath/>
 	</parent>
 	<groupId>com.weather</groupId>
 	<artifactId>prediction</artifactId>
@@ -40,6 +40,11 @@
 			<version>3.0.0</version> <!-- Use the appropriate version -->
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.0</version> <!-- Use the latest version -->
+		</dependency>
 
 	</dependencies>
 
@@ -48,8 +53,10 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>2.6.0</version> <!-- Use the appropriate version -->
 			</plugin>
 		</plugins>
+		<finalName>weather-prediction</finalName>
 	</build>
 	<repositories>
 		<repository>
