--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+# API Key
+api.openweathermap.key=d2929e9483efc82c82c32ee7e02d563e
+
+# API URLs
+api.openweathermap.url=https://api.openweathermap.org/data/2.5/forecast
